Fixed meta tags, default to recruit image, disclaimer readability fixed

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -73,5 +73,6 @@ span {
 #disclaimer {
     font-size: 0.5em;
     opacity: 0.5;
+    color: #000;
 }
 @media only screen and (min-device-width : 320px) and (max-device-width : 568px) { body {font-size: 28px; zoom: 1;}}
